# TrafficMonitoring

./: .gitignore  CHANGELOG_AGENT.md  CMakeLists.txt  COPILOT_INSTRUCTIONS_A1.md  COPILOT_INSTRUCTIONS_B1.md  NetGuard.txt  README.md  gitignore  instruction.md
config/: netguard.json
src/: main.cpp
src/alert/: AlertManager.cpp  AlertManager.h  Notifier.cpp  Notifier.h
src/config/: Config.cpp  Config.h
src/monitor/: ClashApiProbe.cpp  ClashApiProbe.h  NetworkMonitor.cpp  NetworkMonitor.h  SpeedCalculator.cpp  SpeedCalculator.h
src/stats/: DailyTracker.cpp  DailyTracker.h  SessionTracker.cpp  SessionTracker.h
src/ui/: OverlayWindow.cpp  OverlayWindow.h  Renderer.cpp  Renderer.h
tools/: NetGuardConfig.cpp
